Update FixRoom backend - close #180
