# backend/docs/swagger.yaml
@@ -223,12 +223,18 @@ definitions:
           Edges holds the relations/edges for other nodes in the graph.
           The values are being populated by the FixRoomQuery when eager-loading is set.
         type: object
+      facebook:
+        description: Facebook holds the value of the "facebook" field.
+        type: string
       fix_detail:
         description: FixDetail holds the value of the "fix_detail" field.
         type: string
       id:
         description: ID of the ent.
         type: integer
+      phone_number:
+        description: PhoneNumber holds the value of the "phone_number" field.
+        type: string
     type: object
   ent.FixRoomEdges:
     properties:
