# backend/ent/migrate/schema.go
@@ -171,7 +171,9 @@ var (
 	// FixRoomsColumns holds the columns for the "fix_rooms" table.
 	FixRoomsColumns = []*schema.Column{
 		{Name: "id", Type: field.TypeInt, Increment: true},
-		{Name: "fix_detail", Type: field.TypeString},
+		{Name: "fix_detail", Type: field.TypeString, Size: 50},
+		{Name: "phone_number", Type: field.TypeString},
+		{Name: "facebook", Type: field.TypeString, Size: 50},
 		{Name: "customer_id", Type: field.TypeInt, Nullable: true},
 		{Name: "room_id", Type: field.TypeInt, Nullable: true},
 		{Name: "object_id", Type: field.TypeInt, Nullable: true},
@@ -184,21 +186,21 @@ var (
 		ForeignKeys: []*schema.ForeignKey{
 			{
 				Symbol:  "fix_rooms_customers_fixs",
-				Columns: []*schema.Column{FixRoomsColumns[2]},
+				Columns: []*schema.Column{FixRoomsColumns[4]},
 
 				RefColumns: []*schema.Column{CustomersColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
 				Symbol:  "fix_rooms_data_rooms_fixs",
-				Columns: []*schema.Column{FixRoomsColumns[3]},
+				Columns: []*schema.Column{FixRoomsColumns[5]},
 
 				RefColumns: []*schema.Column{DataRoomsColumns[0]},
 				OnDelete:   schema.SetNull,
 			},
 			{
 				Symbol:  "fix_rooms_furniture_details_fixs",
-				Columns: []*schema.Column{FixRoomsColumns[4]},
+				Columns: []*schema.Column{FixRoomsColumns[6]},
 
 				RefColumns: []*schema.Column{FurnitureDetailsColumns[0]},
 				OnDelete:   schema.SetNull,
